[package]
name = "agricultural_vision_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# 核心 Web 框架和异步运行时
tokio = { version = "1", features = ["full"] }
axum = "0.7"

# HTTP 中间件和服务
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# 日志和追踪
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 序列化/反序列化 (JSON, etc.)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 配置管理
config = { version = "0.14", features = ["yaml"] }
# 懒加载静态变量
once_cell = "1.19"

# 数据库 (PostgreSQL)
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros"] }

# Redis
redis = { version = "0.25", features = ["tokio-comp"] }

# Kafka
rdkafka = { version = "0.36", features = ["tokio"] }

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# JWT
jsonwebtoken = "9"
# 雪花算法ID
sonyflake = "0.2"