[package]
name = "agricultural_vision_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
# 核心 Web 框架和异步运行时
tokio = { version = "1", features = ["full"] }
axum = "0.8.4"

# HTTP 中间件和服务
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }

# 日志和追踪
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 序列化/反序列化 (JSON, etc.)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 配置管理
config = { version = "0.15.11", features = ["yaml"] }
# 懒加载静态变量
once_cell = "1.21"

# 数据库 (PostgreSQL)
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "macros"] }

# Redis
redis = { version = "0.32.2", features = ["tokio-comp"] }

# Kafka
rdkafka = { version = "0.37.0", features = ["tokio"] }

# 错误处理
anyhow = "1.0"
thiserror = "2.0.12"

# JWT
jsonwebtoken = "9"
# 雪花算法ID
sonyflake = "0.3.0"
headers = "0.4.1"
time = "0.3.41"
